<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
            android:id="@+id/intro_layout"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_round_pilot"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/go_tech_title"
                android:text="@string/go_tech_ques"
                android:textSize="48sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/rick_n_morty"
                android:id="@+id/rick_support"
                android:paddingStart="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/go_tech_title"
                android:textSize="22sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>
            <View
                android:id="@+id/seperate"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"

                android:layout_below="@id/rick_support"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/required_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seperate"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="20sp" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/first_q_laout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@id/intro_layout"
            android:background="@drawable/bg_round_pilot"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/question_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="q1" />
            <TextView
                android:id="@+id/q1_required_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/question_1_text"
                android:text="@string/star"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_1_text"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q1_first_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/q1_second_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/q1_third_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked" />
            </RadioGroup>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/second_q_laout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@id/first_q_laout"
            android:background="@drawable/bg_round_pilot"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/question_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="q2"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/q2_required_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/question_2_text"
                android:text="@string/star"
                android:textColor="@color/red"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/q2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_2_text"
                android:hint="@string/your_answer" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/third_q_laout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@id/second_q_laout"
            android:background="@drawable/bg_round_pilot"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/question_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="q3" />
            <TextView
                android:id="@+id/q3_required_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/question_3_text"
                android:text="@string/star"
                android:textColor="@color/red"
                android:visibility="gone"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3_radio_group"
                android:layout_below="@id/question_3_text"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/q3_first_answer"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/q3_second_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/q3_third_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3_free_text_radio_btn"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <EditText
                android:id="@+id/q3_free_text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:enabled="false"
                android:layout_toRightOf="@id/question_3_radio_group" />

        </RelativeLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/third_q_laout"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"

         />

    </RelativeLayout>
</ScrollView>
</layout>